log/build_2023-04-11_21-46-27/my_ros2_package/stderr.log
/home/roar/.local/lib/python3.8/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/roar/jiamingzhang/ros2_ws/src/install/my_ros2_package/lib/python3.8/site-packages/my_ros2_package/calib_test_node.py", line 116
    if counter == self.
                      ^
SyntaxError: invalid syntax

